# davewalker5.github.io

./: .gitignore  .vale.ini  2026-06-18-001-mallorca.md  CNAME  Gemfile  LICENSE  LICENSE-CONTENT.md  README.md  _config.local.yml  _config.yml  build.sh  cspell.json  index.md  license.md  make_venv.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  robots.txt
_data/: abingdon_classification.yml  abingdon_yil.yml  aircraft_manufacturer_reports.yml  aircraft_reports.yml  airports.csv  batcalls.yml  bats.yml  leitz_plates.csv  locations.csv  mallorca2026.yml  microscopy.yml  microscopy_investigations.csv  modelling.yml  morphology.yml  pocket_ecology.yml  recording_index.csv  reference_links.yml  selborne.yml  species.csv  stromatolites.yml  tanzania2022.yml  thrupp_classification.yml  tools.yml  travel.yml  weather.yml  weather_reports.yml  wildlife.yml  wildlife_models.yml  wildlife_reports.yml  year_in_the_life_of.yml
_includes/: blog-navigation.html  breadcrumbs-jsonld.html  breadcrumbs.html  classification-calendar-strip.html  classification-seasonal-wheel.html  classification-summary-card.html  classification-trait-badges.html  dataset-citation.html  dataset-multiple-citations.html  dataset-single-citation.html  footer.html  fullwidth-image.html  hero.html  image-block.html  journal-nav.html  journal-notes.html  landing-section.html  lightbox-gallery.html  logspiral-invitation.html  modelling-invitation.html  nav.html  ode-solver-invitation.html  plate-card.html  plates-grid.html  print-plates-grid.html  reference-table.html  related-posts.html  (+15 more)
(+2720 files in other folders)
