[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "field-notes-journal"
version = "2.0.0"
description = "Field Notes Journal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4",
  "folium",
  "ipykernel",
  "jinja2",
  "jupyter",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "papermill",
  "pillow",
  "plotly",
  "pytest",
  "python-dotenv",
  "pyyaml",
  "requests",
  "ruff",
  "scipy",
  "seaborn",
  "sqlparse",
  "statsmodels",
  "weasyprint"
]

[tool.setuptools]
py-modules = []
